[gd_scene load_steps=4 format=3 uid="uid://c15g2l1arshqn"]

[ext_resource type="Texture2D" uid="uid://bj87if3xp5tym" path="res://icon.svg" id="1_m42f2"]
[ext_resource type="Script" path="res://ver_1/game/UI/bottom_ui/base_box_ui.gd" id="2_fihrr"]
[ext_resource type="Theme" uid="uid://bi5qmx7rssrn2" path="res://rs_theme.tres" id="3_vb22a"]

[node name="BaseBoxUI" type="TextureRect"]
offset_right = 512.0
offset_bottom = 512.0
texture = ExtResource("1_m42f2")
expand_mode = 2
script = ExtResource("2_fihrr")

[node name="RemainingTimeLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="DescriptionContainer" type="Control" parent="."]
anchors_preset = 0
offset_top = -77.0
offset_right = 40.0
offset_bottom = -37.0

[node name="DescriptionLabel" type="Label" parent="DescriptionContainer"]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.921
anchor_bottom = 1.921
offset_left = -2.0
offset_top = -60.84
offset_right = 139.0
offset_bottom = -37.84
theme = ExtResource("3_vb22a")
text = "No description set"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
